# travel-planner-agents

./: .env.sample  .gitignore  README.md  pyproject.toml  requirements.txt
backend/: main.py  store.py
backend/agents/: calendar.py  place_search.py  planner.py  share.py  supervisor.py
backend/prompts/: __init__.py  calendar.py  place_search.py  planner.py  share.py  supervisor.py
docs/: architecture.md  env_setup.md  todo.md
frontend/: streamlit_app.py
scripts/: run_all.sh  run_ui.sh
